--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
       <div class="desc">
         <h3 class="project-tile">
-          <a href="#" target="_blank">Personal Portfolio</a>
+          <a href="https://sachinsingh20.github.io/portfolio/" target="_blank">Personal Portfolio</a>
         </h3>
         <p>A static personal portfolio website, built with HTML and CSS</p>
       </div>
