--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
       </div>
       <div class="desc">
         <h3 class="project-tile">
-          <a href="#" target="_blank">Product Idea</a>
+          <a href="#" target="_blank">DSA Project</a>
         </h3>
-        <p>Project is being developed. Comming soon...</p>
+        <p>A project to learn Data Structure & Algorithm.</p>
       </div>
     </div>
 
