--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
   <h2>About Me:</h2>
   <div id="about-container">
     <div id="my-story">
-      <p>I'm an Information Technology Engineer with personal and academic experience in computer science and programming. I am interested in all aspects of technology and especially in Web Development (full stack and PWAs), Software Development and DBMS. I'm passionate about Arts & Design. I really enjoy learning new things and I'm always open to new ideas and projects.</p>
+      <p>I'm an Information Technology Engineer with personal and academic experience in computer science and programming. I am interested in all aspects of technology and especially in Software Development and DBMS. I'm passionate about Arts & Design. I really enjoy learning new things and I'm always open to new ideas and projects.</p>
     </div>
     <div id="interests-list">
       <h3>Interests</h3>
       <ul>
-        <li>Programming</li>
-        <li>Web Development</li>
+        <li>Salesforce</li>
+        <li>Cloud Computing</li>
         <li>DBMS</li>
         <li>Software Development</li>
         <li>Arts and Travel</li>
@@ -133,9 +133,9 @@
       </div>
       <div class="desc">
         <h3 class="project-tile">
-          <a href="#" target="_blank">Product Idea</a>
+          <a href="#" target="_blank">IQVIA Projects</a>
         </h3>
-        <p>Project is being developed. Comming soon...</p>
+        <p>Working as Software developer in IQVIA. mainly on salesforce, oce. Developing skills in various technologies</p>
       </div>
     </div>
 
